--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -3,6 +3,9 @@
 <!-- content area -->
 		<div class="row">
 			<div id="list" class="col-lg-12">
+			<h1 class="page-header">
+                            <small>Reports</small>
+                        </h1>
 				<ul>
 					<% files.forEach(function(file) { %>
         					<li><a href="logs/<%= file %>"> <%= file %></a></li>
