--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,11 @@
 <% include ../partials/header %>
 
 <!-- content area -->
-		<p>Welcome to the Advertiser Compliance Toolkit. <p/>
+	<div class="row">
+               <div id="list" class="col-lg-12">
+		<h1 class="text-primary page-header">
+			<small>ADV Compliance Toolkit</small>
+                </h1>
 		<p>This utility will crawl advertiser's destination URLs and report back about any violations it had discovered along with screenshots of the offending page.</p>
 		<p>Supported violations:</p>
 		<ul>
@@ -11,6 +15,9 @@
 			<li>500 Errors</li>
 			<li>Frame Killers/Busters</li>
 		</ul>
-		<p>In order to run the BOT, go to &quot;Run ADVCP Bot&quot; and click on &quot;Run Bot&quot; - an email with the results will be sent to the recipient.</p>
-
+		<br/>
+		<p>* In order to run the BOT, go to &quot;Run ADVCP Bot&quot; and click on &quot;Run Bot&quot; - an email with the results will be sent to the recipient.</p>
+		<p>* Reports archive is under the `Reports` tab</p>
+	      </div>
+	</div>
 <% include ../partials/footer %>
