--- a/views/pages/run.ejs
+++ b/views/pages/run.ejs
@@ -2,11 +2,12 @@
 
 <!-- content area -->
 		<div class="row">
-			<div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa"></i> ADVCP BOT</h3>
-                            </div>
-                            <div class="panel-body">
-                                <form role="form" method="post" id="bot" name="bot">
+		    <div id="list" class="col-lg-9">
+			   <h1 class="page-header">
+                           	<small>ADVCP BOT - Enter report recipient</small>
+	                   </h1>
+                           <div class="panel-body">
+                               <form role="form" method="post" id="bot" name="bot">
                                     <fieldset>
 					<div class="form-group" id="email-error"></div>
                                         <div class="form-group" id="msg">
@@ -20,5 +21,6 @@
                                     </fieldset>
                                 </form>
                           </div>
+		     </div>
 		</div>
 <% include ../partials/footer %>
