--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,6 +50,9 @@
                         <li>
                             <a href="/reports"><i class="fa fa-fw fa-calendar"></i> Reports</a>
                         </li>
+                        <li>
+                            <a href="/"><i class="fa fa-fw fa-calendar"></i> Home</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
