--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,13 +7,13 @@
 			<small>ADV Compliance Toolkit</small>
                 </h1>
 		<p>This utility will crawl advertiser's destination URLs and report back about any violations it had discovered along with screenshots of the offending page.</p>
-		<p>Supported violations:</p>
+		<p>Supported detection:</p>
 		<ul>
 			<li>JS POPUPS (Alerts)</li>
 			<li>Overlays</li>
 			<li>404 Errors</li>
 			<li>500 Errors</li>
-			<li>Frame Killers/Busters</li>
+			<li>Facebook Instant Articles</li>
 		</ul>
 		<br/>
 		<p>* In order to run the BOT, go to &quot;Run ADVCP Bot&quot; and click on &quot;Run Bot&quot; - an email with the results will be sent to the recipient.</p>
