--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,14 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+        #upstatus {
+            padding: 6px 6px;
+            margin: 6px 0;
+        }
+        #msg {
+            padding: 8px 0px;
+    </style>
 </head>
 
 <body>
