--- a/views/pages/run.ejs
+++ b/views/pages/run.ejs
@@ -4,23 +4,35 @@
 		<div class="row">
 		    <div id="list" class="col-lg-9">
 			   <h1 class="page-header">
-                           	<small>ADVCP BOT - Enter report recipient</small>
+                           	<small>ADVCP BOT</small>
 	                   </h1>
                            <div class="panel-body">
-                               <form role="form" method="post" id="bot" name="bot">
-                                    <fieldset>
-					<div class="form-group" id="email-error"></div>
+                                <!-- upload form -->
+                                <div class="form-group" id="chkContainer">
+                                    <input type="checkbox" id="chkUpload" name="chkUpload" /> <label style="font-weight: 400" for="chkUpload">Upload Feed</label>
+                                </div>
+                                <div style="display:none" class="form-group" id="uploadFormCont">
+                                    <form role="form" id="uploadForm" name="uploadForm" enctype="multipart/form-data" action="/upload/feed" method="post">
+                                        <h6>Feed Format (CSV): AccountID, AccountName, CampaignName, AdGroupName, UserName, Code, DestinationURL</h6>
+                                        <input type="file" id="file" class="form-control upload" name="feed" placeholder="Select a feed to upload" />
+                                        <div id="upstatus"></div>
+                                        <input id="btnUpload" type="submit" class="btn btn-primary" value="Upload Feed" name="submit" />
+                                    </form>
+                                </div>
+                                <div class="form-group" id="recipientForm">
+                                    <form role="form" method="post" id="bot" name="bot">
+                                        <div class="form-group" id="email-error"></div>
                                         <div class="form-group" id="msg">
                                             <input class="form-control" id="email" required placeholder="E-mail recipient" data-error="Please enter your email" name="email" type="email" autofocus>
                                         </div>
                                         <a class="btn btn-lg btn-primary btn-block" id="btnRun">Run Bot</a>
-                                        <br/>
-					<div class="form-group">
-						<p id="status"></p>
-					</div>
-                                    </fieldset>
-                                </form>
+                                        <div class="form-group">
+                                            <pre style="display:none" id="botstatus"></pre>
+                                        </div>
+                                    </form>
+                                </div>
                           </div>
 		     </div>
 		</div>
+                
 <% include ../partials/footer %>
