--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,6 +9,9 @@
     <!-- jQuery -->
     <script src="/js/jquery-1.10.2.js"></script>
 
+    <!-- uploader -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
+
     <!-- Bootstrap Core JavaScript -->
     <script src="/js/bootstrap.min.js"></script>
 
@@ -18,27 +21,77 @@
     <!-- Custom Theme JavaScript -->
     <script src="/js/sb-admin-2.js"></script>
 
-    <script type="text/javascript">
+    <!-- socket.io -->
+    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script>
     $(document).ready(function() {
-        $('#btnRun').click(function() {
+        
+        $('#chkUpload').change(function() {
+            if(this.checked) $('#uploadFormCont').show();
+            else $('#uploadFormCont').hide();
+        });
+
+        $('#uploadForm').submit(function(e) {
+            if($("#file").val() == '') {
+                e.preventDefault();
+                $('#upstatus').html('Please select a file to upload');
+                $('#upstatus').addClass('alert-danger');
+                return false;
+            }
+
+            $("#upstatus").empty().text("File is uploading...");
+            $(this).ajaxSubmit({
+                error: function(xhr) {
+                    console.log(xhr.status);
+                    status(xhr.status);
+                    $('#upstatus').removeClass('alert-success');
+                    $('#upstatus').addClass('alert-danger');
+                },
+                success: function(response) {
+                    $("#upstatus").empty().text(response);
+                    $('#upstatus').removeClass('alert-danger');
+                    $('#upstatus').addClass('alert-success');
+                    $('#btnUpload').hide();
+                    console.log(response);
+                }
+            });
+            return false;
+        });    
+
+        $('#btnRun').on('click', function(e) {      
             var email = $('#email').val();
             var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             if(re.test(email)) {
+                var socket = io('http://localhost:8000');
+                socket.on('newdata', function(d){
+                    $('#botstatus').html(d);
+                });
+
+                socket.on('close', function(d){
+                    $('#msg').addClass('alert alert-success');
+                    $('#msg').html('&nbsp;&nbsp;<span class="icon-large icon-ok"></span> Bot process completed.');
+                });
+
+                $.get('http://localhost:8080/run-bot?email=' + $('#email').val(), function(result) {
+                 	// open socket
+             	});
+
+                $('#chkContainer').hide();
+                $('#uploadFormCont').hide();
                 $('#btnRun').hide();
-		$.get('http://localhost:3000/process?email=' + $('#email').val(), function(result) {
-                	$('#msg').html('Running bot ... '); 
-            	});
-                $('#status').html("<li>An email with the report will be sent to " + email + " upon completion.</li><li>The report will be saved under the `Reports` tab</li>");
+                $('#botstatus').show();
+		$('#msg').html('Running bot ... '); 
                 $('#email-error').hide();
             } else {
+                $('#chkUpload').show();
+                $('#chkContainer').show();
                 $('#email-error').html('Please enter a valid email');
-                $('#status').html('');
+                $('#botstatus').html('');
                 return;
             }
         });
     });
     </script>
 </body>
-
 </html>
 
