--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -25,7 +25,14 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script>
     $(document).ready(function() {
-        
+        $('#src').change(function() {
+            if($('#src').val() == 'file') {
+                $('#chkContainer').show();
+            } else {
+                $('#chkContainer').hide();
+            }
+        });
+
         $('#chkUpload').change(function() {
             if(this.checked) $('#uploadFormCont').show();
             else $('#uploadFormCont').hide();
@@ -59,11 +66,13 @@
         });    
 
         $('#btnRun').on('click', function(e) {      
-            var email = $('#email').val();
+            var email   = $('#email').val();
+            var ua      = $('#ua').val();
+            var source  = $('#source').val();
             var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             if(re.test(email)) {
                 var socket = io('http://localhost:8000');
-                socket.emit('run', 1);
+                socket.emit('run', {email: email, src: source, ua: ua});
                 socket.on('newdata', function(d){
                     $('#botstatus').html(d);
                 });
@@ -72,16 +81,12 @@
                     $('#msg').addClass('alert alert-success');
                     $('#msg').html('&nbsp;&nbsp;<span class="icon-large icon-ok"></span> Bot process completed.');
                 });
-                /*
-                $.get('http://localhost:8080/run-bot?email=' + $('#email').val(), function(result) {
-                 	// open socket
-             	});
-                */
+                
                 $('#chkContainer').hide();
                 $('#uploadFormCont').hide();
                 $('#btnRun').hide();
                 $('#botstatus').show();
-		$('#msg').html('Running bot ... '); 
+		$('#msg').html('Running bot ... please wait'); 
                 $('#email-error').hide();
             } else {
                 $('#chkUpload').show();
