--- a/conf/footer.ejs
+++ b/conf/footer.ejs
@@ -71,7 +71,7 @@
             var source  = $('#source').val();
             var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             if(re.test(email)) {
-                var socket = io('http://localhost:8000');
+                var socket = io('%{adv.socket}%');
                 socket.emit('run', {email: email, src: source, ua: ua});
                 socket.on('newdata', function(d){
                     $('#botstatus').html(d);
