--- a/conf/footer.ejs
+++ b/conf/footer.ejs
@@ -68,11 +68,14 @@
         $('#btnRun').on('click', function(e) {      
             var email   = $('#email').val();
             var ua      = $('#ua').val();
-            var source  = $('#source').val();
+            var source  = $('#src').val();
+            var offset  = $('#offset').val();
+            var limit   = $('#limit').val();
+
             var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             if(re.test(email)) {
                 var socket = io('%{adv.socket}%');
-                socket.emit('run', {email: email, src: source, ua: ua});
+                socket.emit('run', {email: email, src: source, ua: ua, offset: offset, limit: limit});
                 socket.on('newdata', function(d){
                     $('#botstatus').html(d);
                 });
