--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -28,8 +28,10 @@
         $('#src').change(function() {
             if($('#src').val() == 'file') {
                 $('#chkContainer').show();
+                $('#dbContainer').hide();
             } else {
                 $('#chkContainer').hide();
+                $('#dbContainer').show();
             }
         });
 
@@ -68,11 +70,14 @@
         $('#btnRun').on('click', function(e) {      
             var email   = $('#email').val();
             var ua      = $('#ua').val();
-            var source  = $('#source').val();
+            var source  = $('#src').val();
+            var offset  = $('#offset').val();
+            var limit   = $('#limit').val();
+
             var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             if(re.test(email)) {
-                var socket = io('http://localhost:8000');
-                socket.emit('run', {email: email, src: source, ua: ua});
+                var socket = io('<%= socket_io %>');
+                socket.emit('run', {email: email, src: source, ua: ua, offset: offset, limit: limit});
                 socket.on('newdata', function(d){
                     $('#botstatus').html(d);
                 });
