UI validation for data source

--- a/views/pages/run.ejs
+++ b/views/pages/run.ejs
@@ -29,11 +29,11 @@
                                 <div class="form-group" style="display: none" id="dbContainer">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <label style="font-weight: 400" for="offset">Offset (start)</label>
+                                        <label style="font-weight: 400" for="offset">Offset (Start Position)</label>
                                         <input class="form-control" name="offset" id="offset" value="0" />
                                     </div>
                                     <div class="col-md-6">
-                                        <label style="font-weight: 400" for="limit">Limit (end)</label>
+                                        <label style="font-weight: 400" for="limit">Limit (Number of Records)</label>
                                         <input class="form-control" name="limit" id="limit" value="1000" />
                                     </div>
                                 </div>
