--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -21,8 +21,12 @@
     <!-- Custom Theme JavaScript -->
     <script src="/js/sb-admin-2.js"></script>
 
+    <!-- file upload -->
+    <script src="/js/fileinput.min.js"></script>
+
     <!-- socket.io -->
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+
     <script>
     $(document).ready(function() {
         $('#src').change(function() {
