--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,12 +21,11 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style type="text/css">
-        #upstatus {
+        #upstatus, #email-error {
             padding: 6px 6px;
             margin: 6px 0;
         }
-        #msg {
-            padding: 8px 0px;
+        #msg {padding: 8px 0px;}
     </style>
 </head>
 
