--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -141,6 +141,13 @@
             includeSelectAllOption: true,
             select: 'Android/Mobile'
         });
+        if($('#detect')) $('#detect').multiselect({
+            checkboxName: 'detect[]',
+            buttonWidth: '100%',
+            dropRight: true,
+            numberDisplayed: 4,
+            select: 'CODE_JSPOPS'
+        });
     });
     </script>
 </body>
