--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
             padding: 6px 6px;
             margin: 6px 0;
         }
-        #msg {padding: 8px 0px;}
+        #msg {padding: 3px 0 6px 0px;}
     </style>
 </head>
 
