--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -86,6 +86,7 @@
             var source  = $('#src').val();
             var offset  = $('#offset').val();
             var limit   = $('#limit').val();
+            var detect  = $('#detect').val();
 
             if(source == 'db') {
                 var regex = /^\d+$/;
@@ -105,7 +106,7 @@
             var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             if(re.test(email)) {
                 var socket = io('<%= socket_io %>');
-                socket.emit('run', {email: email, src: source, ua: ua, offset: offset, limit: limit});
+                socket.emit('run', {email: email, src: source, ua: ua, offset: offset, limit: limit, detect: detect});
                 socket.on('newdata', function(d){
                     $('#botstatus').html(d);
                 });
