Kill bot process

--- a/views/pages/run.ejs
+++ b/views/pages/run.ejs
@@ -3,12 +3,13 @@
 <link rel="stylesheet" href="/css/bootstrap-multiselect.css" type="text/css"/>
 <!-- content area -->
 		<div class="row">
-		    <div id="list" class="col-lg-9">
+		    <div id="list" class="col-lg-10">
 			   <h1 class="page-header">
                            	<small>ADVCP BOT</small>
 	                   </h1>
                            <div class="panel-body">
                                 <div class="row">
+                                    <input type="hidden" name="botProcess" id="botProcess" value="" />
                                     <div class="col-md-6">
                                         <label style="font-weight: 400" for="src">Data Source</label>
                                         <select class="form-control" name="src" id="src">
