--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -106,9 +106,29 @@
             var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
             if(re.test(email)) {
                 var socket = io('<%= socket_io %>');
+
                 socket.emit('run', {email: email, src: source, ua: ua, offset: offset, limit: limit, detect: detect});
+
+                socket.on('start', function(id){
+                    $('#botProcess').val(id);
+                    $('#chkContainer').hide();
+                    $('#uploadFormCont').hide();
+                    $('#btnRun').hide();
+                    $('#botstatus').show();
+                    $('#msg').addClass('alert alert-info');
+                    $('#msg').html('<div class="row"><div class="col-md-6">&nbsp;&nbsp;Running bot ... please wait (pid=' + id + ')</div><div class="col-md-6 text-right"><a id="btnKill" class="btn btn-xs btn-danger">Kill Process <span class="glyphicon glyphicon-remove"></span></a>&nbsp;</div></div>'); 
+                    $('#email-error').hide();
+                    $('#btnKill').on('click', function(e) {
+                        socket.emit('kill', {pid: $('#botProcess').val()});
+                    });
+                });
+
                 socket.on('newdata', function(d){
                     $('#botstatus').html(d);
+                });
+
+                socket.on('killed', function(d){
+                    $('#botstatus').html('Bot process terminated');
                 });
 
                 socket.on('close', function(d){
@@ -118,13 +138,6 @@
                     $('#msg').html('&nbsp;&nbsp;<span class="icon-large icon-ok"></span> Bot process completed @ ' + new Date());
                 });
                 
-                $('#chkContainer').hide();
-                $('#uploadFormCont').hide();
-                $('#btnRun').hide();
-                $('#botstatus').show();
-                $('#msg').addClass('alert alert-info');
-		$('#msg').html('&nbsp;&nbsp;Running bot ... please wait'); 
-                $('#email-error').hide();
             } else {
                 $('#chkUpload').show();
                 if(source !== 'db') $('#chkContainer').show();
