--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
 	<div class="row">
                <div id="list" class="col-lg-12">
 		<h1 class="text-primary page-header">
-			<small>ADV Compliance Toolkit</small>
+			<small>ADVCP Compliance Toolkit - Overview</small>
                 </h1>
 		<p>This utility will crawl advertiser's destination URLs and report back about any violations it had discovered along with screenshots of the offending page.</p>
 		<p>Supported detection:</p>
@@ -13,11 +13,40 @@
 			<li>Overlays</li>
 			<li>404 Errors</li>
 			<li>500 Errors</li>
+                        <li>X-Frame-Options</li>
 			<li>Facebook Instant Articles</li>
 		</ul>
 		<br/>
-		<p>* In order to run the BOT, go to &quot;Run ADVCP Bot&quot; and click on &quot;Run Bot&quot; - an email with the results will be sent to the recipient.</p>
-		<p>* Reports archive is under the `Reports` tab</p>
+                <p>Instructions:</p>
+                <ul>
+                    <li>To run the BOT: go to &quot;Run ADVCP Bot&quot; select bot options from dropdowns and click on &quot;Run Bot&quot; - an email with the results will be sent to the recipient.</li>
+                    <li>You can choose to upload a (.csv) feed via the UI or choose `database` as the source for the Bot. (under Data Source)</li>
+                    <li> Reports archive is under the `Reports` tab</li>
+                </ul>
+                
+                <p class="page-header">Tech:</p>
+                <ul>
+                    <li>Config files:</li>
+                    <code>includes/config.js</code> - Application <br/>
+                    <code>includes/useragents.js</code> - User-Agents <br/>
+                    <code>includes/rackspace.js</code> - Rackspace CDN <br/>
+                    <code>includes/mysql.js</code> - Database <br/>
+                    <code>includes/detect.js</code> - Violation detection <br/>
+                    <code>includes/mail_cfg.js</code> - Mail <br/>
+                </ul>
+                <ul>
+                    <li>Modules/Scripts:</li>
+                    <code>crawler.js</code> - main bot module<br/>
+                    <code>sync_to_cdn.js</code> - CDN file synchronizer<br/>
+                    <code>mailer.js</code> - Mailer<br/>
+                    <code>main.sh</code> - Shell wrapper (crontab ready)<br/>
+                    <code>server.js</code> - NodeJs server (API)<br/>
+                </ul>
+                <ul>
+                    <li>Examples:</li>
+                    Crontab: <code>./main.sh -m , -o 0 -t 1000 -s file -f feed.csv -u Chrome43/Win8 -r admin@advertise.com -l 4-4-16 -v CODE_JSPOP</code> <br/>
+                    CasperJs: <code>casperjs --ignore-ssl-errors=true --log_delim=, --src=file --feed=feed.csv --logfile=4-8-2016 --detect=CODE_JSPOP,CODE_XFRAME --ua=Android/Mobile crawler.js</code> <br/>
+                </ul>
 	      </div>
 	</div>
 <% include ../partials/footer %>
