--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,10 +20,10 @@
                     <li>You can choose to upload a (.csv) feed via the UI or choose `database` as the source for the Bot. (under Data Source)</li>
                     <li> Reports archive is under the `Reports` tab</li>
                 </ul>
-                
+               
                 <p class="page-header"><strong>Tech:</strong></p>
+                <p>Config files:</p>
                 <ul>
-                    <li>Config files:</li>
                     <code>includes/config.js</code> - Application <br/>
                     <code>includes/useragents.js</code> - User-Agents <br/>
                     <code>includes/rackspace.js</code> - Rackspace CDN <br/>
@@ -31,18 +31,21 @@
                     <code>includes/detect.js</code> - Violation detection <br/>
                     <code>includes/mail_cfg.js</code> - Mail <br/>
                 </ul>
+                <p>Modules/Scripts:</p>
                 <ul>
-                    <li>Modules/Scripts:</li>
                     <code>crawler.js</code> - main bot module<br/>
                     <code>sync_to_cdn.js</code> - CDN file synchronizer<br/>
                     <code>mailer.js</code> - Mailer<br/>
                     <code>main.sh</code> - Shell wrapper (crontab ready)<br/>
                     <code>server.js</code> - NodeJs server (API)<br/>
+                    <code>request.js</code> - Feed writer (from API)<br/>
                 </ul>
+                <p>Examples:</p>
                 <ul>
-                    <li>Examples:</li>
                     Crontab: <code>./main.sh -m , -o 0 -t 1000 -s file -f feed.csv -u Chrome43/Win8 -r admin@advertise.com -l 4-4-16 -v CODE_JSPOP</code> <br/>
                     CasperJs: <code>casperjs --ignore-ssl-errors=true --log_delim=, --src=file --feed=feed.csv --logfile=4-8-2016 --detect=CODE_JSPOP,CODE_XFRAME --ua=Android/Mobile crawler.js</code> <br/>
+                    CDN: <code>node sync_to_cdn.js FILE</code> <br/>
+                    Mailer: <code>node mailer.js RCPT FILE [UA] </code> <br/>
                 </ul>
                 <br/><br/>
 	      </div>
