--- a/views/pages/run.ejs
+++ b/views/pages/run.ejs
@@ -60,7 +60,7 @@
                                 <div class="row">
                                 <div class="col-lg-12">
                                     <div style="display:none" class="form-group" id="uploadFormCont"><br/>
-                                        <form role="form" id="uploadForm" name="uploadForm" enctype="multipart/form-data" action="/upload/feed" method="post">
+                                        <form role="form" id="uploadForm" name="uploadForm" enctype="multipart/form-data" action="/upload" method="post">
                                             <small>Feed Format (CSV): AccountID, AccountName, CampaignName, AdGroupName, UserName, Code, DestinationURL</small>
                                             <input type="file" id="file" class="file" multiple data-show-upload="false" data-show-caption="true" name="feed" placeholder="Select a feed to upload" />
                                             <div id="upstatus"></div>
