--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,8 +31,18 @@
                     <code>includes/detect.js</code> - Violation detection <br/>
                     <code>includes/mail_cfg.js</code> - Mail <br/>
                 </ul>
-                <p>Modules/Scripts:</p>
+                <p>Application:</p>
                 <ul>
+                    <code>assembly/</code> - maven config<br/>
+                    <code>conf/</code> - profile config<br/>
+                    <code>css/</code> - css files<br/>
+                    <code>js/</code> - js files<br/>
+                    <code>routes/</code> - app routes<br/>
+                    <code>models/</code> - models<br/>
+                    <code>node_modules/</code> - node modules<br/>
+                    <code>includes/</code> - bot config and client scripts<br/>
+                    <code>screenshots/</code> - captured screenshots<br/>
+                    <code>data/</code> - feeds and data files<br/>
                     <code>crawler.js</code> - main bot module<br/>
                     <code>sync_to_cdn.js</code> - CDN file synchronizer<br/>
                     <code>mailer.js</code> - Mailer<br/>
