--- a/views/pages/run.ejs
+++ b/views/pages/run.ejs
@@ -79,6 +79,7 @@
                                             </div>
                                         </form>
                                     </div>
+                                    <a id="top" style="display:none" class="btn btn-primary">Top</a>
                                 </div>
                                 </div>
                           </div>
