--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -53,10 +53,10 @@
                 </ul>
                 <p>Examples:</p>
                 <ul>
-                    Crontab: <code>./main.sh -m , -o 0 -t 1000 -s file -f feed.csv -u Chrome43/Win8 -r admin@advertise.com -l 4-4-16 -v CODE_JSPOP</code> <br/>
-                    CasperJs: <code>casperjs --ignore-ssl-errors=true --log_delim=, --src=file --feed=feed.csv --logfile=4-8-2016 --detect=CODE_JSPOP,CODE_XFRAME --ua=Android/Mobile crawler.js</code> <br/>
-                    CDN: <code>node sync_to_cdn.js FILE</code> <br/>
-                    Mailer: <code>node mailer.js RCPT FILE [UA] </code> <br/>
+                    Crontab: <br/><code>0 * * * * /bin/bash /path/to/main.sh -m , -o 0 -t 1000 -s file -f feed.csv -u Chrome43/Win8 -r admin@advertise.com -l 4-4-16 -v CODE_JSPOP</code> <br/>
+                    CasperJs: <br/><code>casperjs --ignore-ssl-errors=true --log_delim=, --src=file --feed=feed.csv --logfile=4-8-2016 --detect=CODE_JSPOP,CODE_XFRAME --ua=Android/Mobile crawler.js</code> <br/>
+                    CDN: <br/><code>node sync_to_cdn.js FILE</code> <br/>
+                    Mailer: <br/><code>node mailer.js RCPT FILE [UA] </code> <br/>
                 </ul><br/>
                 </div>
                 <br/><br/>
